dyntopo - materials and UI display issues #35354

Closed
opened 2013-05-14 19:47:18 +02:00 by Kris Slazinski · 6 comments

%%%--- Operating System, Graphics card ---
OS X 10.8.3, NVIDIA GeForce 320M 256 MB

- Blender version with error, and version that worked ---

error: 2.67, worked: ?

- Short description of error ---

In sculpt mode, when enabling dyntopo, there are some issues with displaying object's materials and UI elements.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open attached dyntopo-material-1.blend file.
  2. Turn dyntopo on and off with Ctrl+D.
  3. Observe material changes and X axis dissapearing.

I've also attached 2 screenshots to depict changes with dyntopo enabled and disabled.
%%%

%%%--- Operating System, Graphics card --- OS X 10.8.3, NVIDIA GeForce 320M 256 MB - Blender version with error, and version that worked --- error: 2.67, worked: ? - Short description of error --- In sculpt mode, when enabling dyntopo, there are some issues with displaying object's materials and UI elements. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open attached dyntopo-material-1.blend file. 2. Turn dyntopo on and off with Ctrl+D. 3. Observe material changes and X axis dissapearing. I've also attached 2 screenshots to depict changes with dyntopo enabled and disabled. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Missing diffuse color in dynamic topology is not a bug, it's a known limitation currently.
Issue with missing axis sounds more like a bug. Will investigate this.%%%

%%%Missing diffuse color in dynamic topology is not a bug, it's a known limitation currently. Issue with missing axis sounds more like a bug. Will investigate this.%%%

%%%flickering arrow is caused by GL_TEXTURE_2D being on when it shouldn't be.%%%

%%%flickering arrow is caused by GL_TEXTURE_2D being on when it shouldn't be.%%%

%%%The issue is now fixed in svn rev56820. Thanks for the report, and thanks to Campbell for help! :)%%%

%%%The issue is now fixed in svn rev56820. Thanks for the report, and thanks to Campbell for help! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%r56823 tested - red axis is visible again. Thanks :)%%%

%%%r56823 tested - red axis is visible again. Thanks :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35354
No description provided.